# MBU_GoogleWorkspace_DLP_Alerts_ATS

./: main.py  pyproject.toml
helpers/: ats_functions.py  config.py  get_and_store_alerts.py  smtp_util.py
processes/: application_handler.py  error_handling.py  process_item.py  queue_handler.py
